Closed
Bug 397852
Opened 18 years ago
Closed 18 years ago
"ASSERTION: Doing nscoord addition with values > nscoord_MAX" with table, margin:100%, overflow:auto
Categories
(Core :: Layout: Tables, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: dholbert)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
197 bytes,
application/xhtml+xml
|
Details | |
|
992 bytes,
patch
|
roc
:
review+
roc
:
superreview+
roc
:
approval1.9+
|
Details | Diff | Splinter Review |
Loading the testcase triggers:
###!!! ASSERTION: Doing nscoord addition with values > nscoord_MAX: 'a < nscoord_MAX && b < nscoord_MAX', file ../../dist/include/gfx/nsCoord.h, line 151
###!!! ASSERTION: nscoord addition will reach or pass nscoord_MAX: '(PRInt64)a + (PRInt64)b < (PRInt64)nscoord_MAX', file ../../dist/include/gfx/nsCoord.h, line 153
| Assignee | ||
Comment 1•18 years ago
|
||
Trivial -- need to check for nscoord_MAX overflow when adding scroll bar pref-width to an infinite-width scrolled frame.
Attachment #282719 -
Flags: review?(roc)
Attachment #282719 -
Flags: superreview+
Attachment #282719 -
Flags: review?(roc)
Attachment #282719 -
Flags: review+
Attachment #282719 -
Flags: approval1.9+
| Assignee | ||
Updated•18 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•18 years ago
|
||
Fix committed:
Checking in nsGfxScrollFrame.cpp;
/cvsroot/mozilla/layout/generic/nsGfxScrollFrame.cpp,v <-- nsGfxScrollFrame.cpp
new revision: 3.314; previous revision: 3.313
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
OS: Mac OS X → All
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: in-testsuite?
| Assignee | ||
Updated•16 years ago
|
Assignee: nobody → dholbert
You need to log in
before you can comment on or make changes to this bug.
Description
•