Bug 397852: ASSERTION: Doing nscoord addition with values > nscoord_MAX r=roc sr=roc a=roc